# FoodSaver

./: .gitignore  .gitmodules  README.md  front.hpp
FoodSaver 1.0/Progress Reports/: AdamNeveux.md  Elisabeth_Le_Lesle.md  Ziyue_Qiu.md  antoineGuichard.md  charlottebl.md  cyriacgregoire.md  esma_masic.md  martinlau.md  oscarpeyron.md
FoodSaver 1.0/app/app-build/: jsonformatter.txt  originalsrecipes.txt
FoodSaver 1.0/app/app-release/: main.cpp  recipecontroller.cpp
FoodSaver 1.0/server/CNN/: CMakeLists.txt  README.txt  cnn_train.cpp  model.py  predict_in_py.py
FoodSaver 1.0/telegram-bot/telegram-bot/: README.md  telegram_bot.cpp
FoodSaver 1.0/test3/: Python version  date.h  main.cpp  offer.cpp  recipe.cpp  recipe.h  recipe_book.cpp  temp.front.cpp  user.cpp  user.h
FoodSaver 2.0/: FoodSaver 2.0
Model and testing projects/Model cpp integration into qml/: qmlmodules
Model and testing projects/Model-cpp-integration-into-qml/: main.qml  maincontroller.cpp  maincontroller.h  untitled.qmlproject.qtds
Model and testing projects/Model-cpp-integration-into-qml/src/: main.cpp
Model and testing projects/Swapping pages + cpp integration (buggy)/: main.qml
Model and testing projects/Swapping-pages+cpp-integration-buggy/: Backend.cpp  Backend.h  ChangePrice.qml  Default.pro  Default.pro.qtds  HomePage.qml  LoginPage.qml  Menu1.qml  Menu3.qml  PopupWindow.qml  SigninPage.qml  main.cpp  qml.qrc
Model and testing projects/test3/: fridge.cpp  front.hpp  ingredient.cpp  link_pocco.cpp  offer.cpp  test3.pro  user.cpp
Model and testing projects/untitled/: untitled.qmlproject
Progress Reports/: AdamNeveux.md  DianaParra.md  Elisabeth_Le_Lesle.md  Elisabeth_Le_Lesle.txt  Sixtine_Lyonnet.md  Ziyue_Qiu.md  anahitinel.md  antoineGuichard.md  charlottebl  charlottebl.md  cyriacgregoire.md  esma_masic.md  fannyscherer.md  martinlau.md  oscarpeyron.md  xiaxisheng.md
What if.app/Contents/: Info.plist
app/: Account.qml  Fridge.qml  app.pro  config.h  main.cpp  main.qml  test.h  websocketclient.cpp  websocketclient.h
app/app-build/: app-build.pro  backend.h  main.cpp  maincontroller.cpp  maincontroller.h  personalcookbookcontroller.cpp  personalcookbookcontroller.h  qml.qrc  recipecontroller.cpp  recipecontroller.h
app/app-release/: CMakeLists.txt  main.cpp  maincontroller.h  personalcookbookcontroller.cpp  personalcookbookcontroller.h
app/app-release/Header/: currentUser.h
app/app-release/QML/: AddRecipePopup.qml  AddToFridge.qml  PersonalCookBook.qml  Settings.qml
app/app-release/Source/: Login.cpp  RecipeBook.cpp  Signin.cpp  SigninInformation.cpp  fridgemanager.cpp  recipeconverter.cpp
app/app-testing/: app.pro  config.h  login.qml  main.cpp  main.qml  resources.qrc
app/cmake-app/: CMakeLists.txt  cmake-app.qmlproject  insight  main.qml  qmlcomponents  qmlmodules  qtquickcontrols2.conf
app/frontExperiments/: CMakeLists.txt  temporary.cpp  temporary.h
app/frontend/: CMakeLists.txt  counterhandler.cpp  frontend.qmlproject  frontend.qmlproject.qtds  qmlmodules
app/src/: Untitled Document 1  temp.md
app/test/: test.cpp
app/websocketclient/: websocketclient.h
client/hpp/: Client_Implementation.hpp
front/: CMakeLists.txt
server/: Untitled Document 1.txt  connectionclient.hpp
server/CNN/: CMakeLists.txt  README.txt  Readme.txt  cnn_model.cpp  cnn_train.cpp  load_data.cpp  model.py  predict_in_c.cpp  predict_in_py.py
server/POCOSocket/: connectionclient.hpp  connectionclientlibraries.hpp
server/POCOSocket/Server/: CMakeLists.txt  client-side.cpp  client-side.hpp  common_characteristics.hpp  database.cpp  database.csv  database.hpp  main.cpp  main.hpp  rpc_client_side 2.hpp  rpc_client_side.cpp  rpc_client_side.hpp  rpc_client_side_esma.cpp  rpc_client_side_esma.hpp  rpc_client_side_tester_file.cpp  rpc_client_side_tester_file.hpp  rpc_server_side.cpp  rpc_server_side.cpp.RMhUXY  rpc_server_side.cpp~RF5e1aa310.TMP
server/POCOSocket/Server/databases/: database_fridge_data.csv  database_offer_list_data.csv  database_simple_data.csv
server/POCOSocket/Server/front_temp_copy/: RecipeBook.cpp  RecipeSearch.hpp  fridge.h  ingredient.cpp  ingredient.h  link_pocco.cpp  offer.cpp  offer.h  temp.json.cpp  test3.pro  totpGenerator.cpp
server/POCOSocket/Server/rpclib-master/doc/pages/: versions.md
server/POCOSocket/Server/rpclib-master/include/rpc/: config.h
server/POCOSocket/Server/web_teste/: CMakeLists.txt  cmake_install.cmake  common_characteristics.hpp  main.cpp  rpc_client_side.cpp  rpc_client_side.hpp
server/POCOSocket/Server/web_teste/rpclib-master/: cmake_install.cmake  rpclib.pc
server/POCOSocket/Server/web_teste/rpclib-master/cmake/: rpclibConfig.cmake  rpclibConfigVersion.cmake  rpclibTargets.cmake
server/POCOSocket/Server/web_teste/rpclib-master/include/rpc/: version.h
server/POCOSocket/Server/web_teste/rpclib-master/rpc_autogen/: deps
server/POCOSocket/test_project1_DO_NOT_TOUCH/: CMakeLists.txt  client_file.cpp  server_testing.cpp
telegram-bot/telegram-bot/: CMakeLists.txt  README.md  telegram_bot.cpp
test3/: CMakeLists.txt  RecipeBook.cpp  RecipeBook.hpp  RecipeSearch.cpp  Recipebook.hpp  Recipes.json  backupserver.cpp  backupserver.h  cmake_install.cmake  crawler.cpp  date.cpp  date.h  fridge.cpp  fridge.h  front.cpp  front.hpp  ingredient.cpp  ingredient.h  link_pocco.cpp  main.cpp  offer.cpp  offer.h  recipe.cpp  recipe.h  recipe_book.h  restClient.cpp  settings.cpp  temp.json.cpp  test3.pro  user.cpp  user.h
test3/client_side_connection/server_to_backend_connection/: CMakeLists.txt  rpc_client_side.cpp  rpc_client_side.hpp
test3/rpclib-master/: cmake_install.cmake
test3/rpclib-master/cmake/: rpclibTargets.cmake
test3/rpclib-master/rpc_autogen/: deps
test3/test3_autogen/: deps
test3/web_teste_autogen/: deps
testing-research/example/: README.md  app-testing-server.py  example_server.py  pure_websocket.py
untitled/: CMakeLists.txt  main.qml  maincontroller.cpp  maincontroller.h
untitled/content/: Screen01.ui.qml
untitled/imports/: CMakeLists.txt
untitled/src/: import_qml_plugins.h
(+192 files in other folders)
